--- a/index-schedule.html
+++ b/index-schedule.html
@@ -21,6 +21,9 @@
 </div> -->
 <div id="vs-title" onclick="showLiam()" ondblclick="showJacobi()">Jacobi's Visual Schedule</div>
 <!-- <div class="button">Or Click me</div> -->
+<div id="reload" onclick="refreshPage()">
+  <img id="reload-icon" src="images/refresh.png">
+</div>
 <a id="toolbox-go" href="index.html">
   <img id="toolbox-logo" src="images/as_puzzle.png">
   <div id="back">Home</div>
@@ -125,6 +128,11 @@
 
   </ul>
 </div>
+<script>
+  function refreshPage(){
+      window.location.reload();
+  }
+  </script>
 <script>
   function showLiam(){
     document.getElementById('vs-title').innerHTML="Liam's Visual Schedule";
