started the social stories page

--- a/index-schedule.html
+++ b/index-schedule.html
@@ -135,8 +135,8 @@
   </script>
 <script>
   function showLiam(){
-    document.getElementById('vs-title').innerHTML="Liam's Visual Schedule";
-    document.getElementById('student-pic').src="images/liam.png";
+    document.getElementById('vs-title').innerHTML="Aidan's Visual Schedule";
+    document.getElementById('student-pic').src="images/aidan.png";
   }
 </script>
 <script>
