--- a/index.html
+++ b/index.html
@@ -878,6 +878,9 @@
 <a id="schedule-btn" href="index-schedule.html">
     <img id="go-schedule" src="images/button.png">
 </a>
+<a id="story-btn" href="team.html">
+    <img id="go-story" src="images/button.png">
+</a>
 
 <section id="home" class="p-0 dark-slider single-slide">
     <h2 class="d-none">hidden</h2>
