added home button

--- a/team.html
+++ b/team.html
@@ -415,7 +415,10 @@
         </section>
         <!--Team Start-->
 
-
+        <a id="toolbox-go" href="index.html">
+            <img id="toolbox-logo" src="images/as_puzzle.png">
+            <div id="back">Home</div>
+        </a>
 <!--Footer Start-->
 <section class="bg-light text-center">
     <h2 class="d-none">hidden</h2>
