--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
                     <div class="col-md-12 text-center">
                         <div class="title d-inline-block">
                             <!-- <h6 class="mb-3">Basic info about componay</h6> -->
-                            <h2 id="my-stories" onclick="liamStories()" ondblclick="jacobiStories()">Jacobi's Social Stories</h2>
+                            <h2 id="my-stories" onclick="jacobiStories()" ondblclick="aidanStories()">Gabriel's Social Stories</h2>
                             <!-- <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p> -->
                         </div>
                     </div>
@@ -86,13 +86,13 @@
 
               
         <script>
-            function liamStories(){
-                document.getElementById('my-stories').innerHTML="Liam's Social Stories"
+            function jacobiStories(){
+                document.getElementById('my-stories').innerHTML="Jacobi's Social Stories"
             }
         </script>
         <script>
-        function jacobiStories(){
-            document.getElementById('my-stories').innerHTML="Jacobi's Social Stories"
+        function aidanStories(){
+            document.getElementById('my-stories').innerHTML="Gabriel's Social Stories"
         }
         </script>
         <section>
