--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
 <a id="schedule-btn" href="index-schedule.html">
     <img id="go-schedule" src="images/button.png">
 </a>
-<a id="story-btn" href="team.html">
+<a id="story-btn" href="../main-file/virb/projects.html">
     <img id="go-story" src="images/button.png">
 </a>
 
@@ -1169,3 +1169,6 @@
 
 </body>
 </html>
+
+
+       
