added social story images and shopping cart image

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
 <!-- <div id="choice">My Choice</div> -->
 <!-- Emotional Needs -->
+<div id="reward">Reward Cart Coming Soon</div>
 <div id="login" onclick="signIn()" ondblclick="signOut()">
     <img id="avatar" src="images/superman.png">
 </div>
@@ -878,6 +879,7 @@
 
         document.getElementById('confused1').style.display="none";
         document.getElementById('confused2').style.display="none";
+        
 
     }
 </script>
@@ -1043,7 +1045,7 @@
                          data-paddingright="[0,0,0,0]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,0,0]"
-                         style="z-index: 13;border-width:0px;"><img src="images/bottom_pen.png" alt="" data-ww="['300px','300px','300px','300px']" data-hh="['500px','500px','500px','500px']" width="300" height="500" data-no-retina> </div>
+                         style="z-index: 13;border-width:0px;"></div>
 
                     <div class="tp-caption tp-resizeme"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
