--- a/virb/projects.html
+++ b/virb/projects.html
@@ -109,7 +109,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_1.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/slider_1.png" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class ="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;">Gabriel is ready for 3rd Grade</h2>
@@ -121,7 +121,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_2.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/social-2.png" class="img-responsive img-border" id="social-2" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;">Gabriel Does all of his Work</h2>
@@ -158,7 +158,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_1.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/slider_2.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;" >Gabriel Handles Loud Noises</h2>
