finished social story covers

--- a/virb/projects.html
+++ b/virb/projects.html
@@ -133,7 +133,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_3.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/ss3.png" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;">Welcome Back from Break Gabriel</h2>
@@ -146,7 +146,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_3.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/ss5.png" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;">Gabriel Goes on a Field Trip</h2>
@@ -158,7 +158,7 @@
         <div class="col-md-4 probootstrap-animate">
           <div class="probootstrap-card with-hover">
             <div class="probootstrap-card-media">
-              <a href="single-page.html"><img src="img/slider_2.jpg" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
+              <a href="single-page.html"><img src="img/ss4.png" class="img-responsive img-border" alt="Free HTML5 Template by uicookies.com"></a>
             </div>
             <div class="probootstrap-card-text">
               <h2 class="probootstrap-card-heading mb0" style="font-family: 'Poppins', sans-serif; text-align: center;" >Gabriel Handles Loud Noises</h2>
