--- a/standalone.html
+++ b/standalone.html
@@ -60,16 +60,16 @@
 <header>
 
     <!--Navigation-->
-    <nav class="navbar navbar-top-default navbar-expand-lg navbar-gradient nav-icon">
-        <div class="container">
-            <a href="javascript:void(0)" title="Logo" class="logo">
+    <!-- <nav class="navbar navbar-top-default navbar-expand-lg navbar-gradient nav-icon">
+        <div class="container"> -->
+            <!-- <a href="javascript:void(0)" title="Logo" class="logo"> -->
                 <!--Logo Default-->
-                <img src="images/logo-white.png" alt="logo" class="logo-dark default">
-            </a>
+                <!-- <img src="images/logo-white.png" alt="logo" class="logo-dark default">
+            </a> -->
 
             <!--Nav Links-->
-            <div class="collapse navbar-collapse" id="wexim">
-                <div class="navbar-nav ml-auto">
+            <!-- <div class="collapse navbar-collapse" id="wexim"> -->
+                <!-- <div class="navbar-nav ml-auto">
                     <a class="nav-link" href="index.html#home">Home</a>
                     <a class="nav-link" href="index.html#about">About</a>
                     <a class="nav-link" href="index.html#team">Team</a>
@@ -78,28 +78,28 @@
                     <a class="nav-link active" href="javascript:void(0)">Blog</a>
                     <a class="nav-link" href="index.html#contact">Contact</a>
                     <span class="menu-line"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
 
             <!--Navigation Social-->
-            <div class="header-social pl-3 d-none d-lg-inline-block">
+            <!-- <div class="header-social pl-3 d-none d-lg-inline-block">
                 <a href="javascript:void(0)" class="facebook-text-hvr"><i class="ti ti-facebook" aria-hidden="true"></i></a>
                 <a href="javascript:void(0)" class="twitter-text-hvr"><i class="ti ti-twitter-alt" aria-hidden="true"></i></a>
                 <a href="javascript:void(0)" class="instagram-text-hvr"><i class="ti ti-instagram" aria-hidden="true"></i></a>
-            </div>
+            </div> -->
 
             <!--Side Menu Button-->
-            <a href="javascript:void(0)" class="d-inline-block sidemenu_btn" id="sidemenu_toggle">
+            <!-- <a href="javascript:void(0)" class="d-inline-block sidemenu_btn" id="sidemenu_toggle">
                 <span></span>
                 <span></span>
                 <span></span>
             </a>
 
-        </div>
-    </nav>
+        </div> -->
+    <!-- </nav> -->
 
     <!--Side Nav-->
-    <div class="side-menu">
+    <!-- <div class="side-menu">
         <div class="inner-wrapper">
             <span class="btn-close" id="btn_sideNavClose"><i></i><i></i></span>
             <nav class="side-nav w-100">
@@ -138,14 +138,14 @@
             </div>
         </div>
     </div>
-    <a id="close_side_menu" href="javascript:void(0);"></a>
+    <a id="close_side_menu" href="javascript:void(0);"></a> -->
     <!-- End side menu -->
 
 </header>
 <!--Header end-->
 
 <!--Cover-->
-<section class="pb-0">
+<!-- <section class="pb-0">
     <div class="bg-overlay gradient-bg1 opacity-6"></div>
     <div class="container">
         <div class="row">
@@ -160,17 +160,17 @@
         </div>
         </div>
     </div>
-</section>
+</section> -->
 <!--Cover End-->
 
 <!--About Start-->
-<section>
+<section style="padding-top:10px;">
     <div class="container">
         <!--Heading-->
         <div class="row wow fadeIn">
             <div class="col-md-12 text-center">
                 <div class="title d-inline-block">
-                    <h6 class="mb-3">Basic info about componay</h6>
+                    <!-- <h6 class="mb-3">Basic info about componay</h6> -->
                     <h2 class="gradient-text1 mb-3">Your Section Here</h2>
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p>
                 </div>
@@ -191,12 +191,10 @@
                 </div>
             </div>
         </div>
-
-        <!--content-->
         <div class="row standalone-row align-items-center">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-6">
                 <div class="blog-image wow hover-effect fadeInLeft">
-                    <img src="images/blog-image2.jpg" alt="image">
+                    <img src="images/blog-image1.jpg" alt="image">
                 </div>
             </div>
             <div class="col-lg-6">
@@ -207,7 +205,46 @@
             </div>
         </div>
 
-        <!--content-->
+        <div class="row standalone-row align-items-center">
+            <div class="col-lg-6">
+                <div class="blog-image wow hover-effect fadeInLeft">
+                    <img src="images/blog-image1.jpg" alt="image">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="d-inline-block">
+                    <h2 class="gradient-text1 pb-3">Standalone Heading</h2>
+                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p>
+                </div>
+            </div>
+        </div>
+        <div class="row standalone-row align-items-center">
+            <div class="col-lg-6">
+                <div class="blog-image wow hover-effect fadeInLeft">
+                    <img src="images/blog-image1.jpg" alt="image">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="d-inline-block">
+                    <h2 class="gradient-text1 pb-3">Standalone Heading</h2>
+                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p>
+                </div>
+            </div>
+        </div>
+        <div class="row standalone-row align-items-center">
+            <div class="col-lg-6">
+                <div class="blog-image wow hover-effect fadeInLeft">
+                    <img src="images/blog-image1.jpg" alt="image">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="d-inline-block">
+                    <h2 class="gradient-text1 pb-3">Standalone Heading</h2>
+                    <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p>
+                </div>
+            </div>
+        </div>
+
         <div class="row standalone-row align-items-center">
             <div class="col-lg-6">
                 <div class="blog-image wow hover-effect fadeInLeft">
@@ -223,7 +260,7 @@
         </div>
 
         <!--content-->
-        <div class="row standalone-row align-items-center">
+        <!-- <div class="row standalone-row align-items-center">
             <div class="col-lg-6 order-lg-2">
                 <div class="blog-image wow hover-effect fadeInLeft">
                     <img src="images/blog-image2.jpg" alt="image">
@@ -235,32 +272,13 @@
                     <p>Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. Nam porttitor justo sed mi finibus, vel tristique risus faucibus. </p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </section>
 
 <!--Footer Start-->
-<section class="bg-light text-center">
-    <h2 class="d-none">hidden</h2>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="footer-social">
-                    <ul class="list-unstyled">
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a class="wow fadeInUp" href="javascript:void(0);"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        <li><a class="wow fadeInDown" href="javascript:void(0);"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-                <p class="company-about fadeIn">© 2019 Wexim. Made With Love By <a href="javascript:void(0);">Themesindustry</a></p>
-            </div>
-        </div>
-    </div>
-</section>
+
 <!--Footer End-->
 
 <!--Scroll Top-->
