--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </div>
 <div id="login-dropdown">
     <div id="account-settings">Account</div>
-    <a id="app-settings" href="standalone.html">Settings</a>
+    <a id="app-settings" href="./dist/index2.html">Settings</a>
     <div id="logout">Logout</div>
 </div>
 <div id="holder1">
