added rewards folder

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <!-- <div id="choice">My Choice</div> -->
 <!-- Emotional Needs -->
-<div id="reward">Reward Cart Coming Soon</div>
+<!-- <div id="reward">Reward Cart Coming Soon</div> -->
 <div id="login" onclick="signIn()" ondblclick="signOut()">
     <img id="avatar" src="images/superman.png">
 </div>
@@ -901,6 +901,9 @@
 </a>
 <a id="story-btn" href="../main-file/virb/projects.html">
     <img id="go-story" src="images/button.png">
+</a>
+<a id="reward-btn" href="../main-file/dist2/index3.html">
+    <img id="go-reward" src="images/button.png">
 </a>
 
 <section id="home" class="p-0 dark-slider single-slide">
