added reward page with counter

--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
 <a id="story-btn" href="../main-file/virb/projects.html">
     <img id="go-story" src="images/button.png">
 </a>
-<a id="reward-btn" href="../main-file/dist2/index3.html">
+<a id="reward-btn" href="reward.html">
     <img id="go-reward" src="images/button.png">
 </a>
 
