--- a/coming-soon.html
+++ b/coming-soon.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
-    <title>Wexim - Coming Soon</title>
+    <title>Rewards</title>
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico">
     <!-- Animate -->
@@ -54,10 +54,11 @@
         </div>
     </div>
 </div>
+
 <!--Loader End-->
 
 <!-- Main Slider -->
-<section id="home" class="p-0">
+<!-- <section id="home" class="p-0">
     <h2 class="d-none">hidden</h2>
     <div class="fullscreen parallax bg-img-count1">
         <div class="col-xs-12 text-center center-col">
@@ -98,7 +99,7 @@
         </div>
     </div>
 
-</section>
+</section> -->
 <!--slider end-->
 <!--Main Slider ends -->
 
